# layer1-c-demo

./: .gitignore  CMakeLists.txt  OUTPUT.md  README.md
.cursor/rules/: cli-rules.mdc  compilation.mdc
include/: http_signer.h  layer1_client.h
include/commands/: create_address.h  create_address_by_asset.h  create_transaction.h
src/: arg_parser.c  arg_parser.h  http_signer.c  layer1_client.c  layer1_client.h  main.c
src/commands/: create_address.c  create_address_by_asset.c  create_transaction.c  list_transactions.c  list_transactions.h
